seperated larger componentent into smaller, and reused them. Also added new components files in right folders

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Holidaze</title>
+  <meta name="description" content="Holidaze is you starting point for an amazing vacation!" />
+  <link rel="icon" href="/Holidaze-fav.png" type="image/png" />
 </head>
 
 <body>
